--- a/app/views/chat/show.html.erb
+++ b/app/views/chat/show.html.erb
@@ -49,7 +49,10 @@
 	#chat_top {
 	  background-color: white;
     border-bottom: 1px solid #ccc;
-    padding: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 25px;
+    padding-right: 25px;
   }
   #img_setting{
     width: 70px;
@@ -84,7 +87,7 @@
         <div class="col-sm-3"></div>
         <form action="/team/addmember" method="get">
           <input type="hidden" name="team" value="<%=@team.id%>"/>
-          <div class="col-sm-2"><button type="submit" class="btn btn-new btn-circle btn-lg"><i class="glyphicon glyphicon-plus"></i></button></div>
+          <div class="col-sm-2"><button type="submit" class="btn btn-new btn-circle btn-lg" style="margin-top: 8px;"><i class="glyphicon glyphicon-plus"></i></button></div>
         </form>
       </div>
       <!-- My Profile -->
@@ -143,14 +146,14 @@
       <% if @chat %>
         <% @chat.each do |chat| %>
           <div class="row" id="chat_top">
-            <div id="profile_me" class="col-sm-12">
-              <li>
-                <form action ="/message/show" method="get">
-                  <input type="hidden" name="chat" value="<%=chat.id%>">
-                  <input type="submit" value="<%=chat.title%>">
-                </form>
-              </li>
-            </div>
+            <form action ="/message/show" method="get">
+              <div id="profile_me" class="col-sm-12">
+                <li>
+                    <input type="hidden" name="chat" value="<%=chat.id%>">
+                    <input type="submit" value="<%=chat.title%>">
+                </li>
+              </div>
+            </form>
           </div>
         <% end %>
       <% end %>
