--- a/app/views/chat/show.html.erb
+++ b/app/views/chat/show.html.erb
@@ -128,30 +128,44 @@
       <div class="row" id="chat_top">
       	<div class="col-sm-6"><h2 style="color: #372727;">Chats</h2></div>
         <div class="col-sm-1"><h2> </h2></div>
-        <div class="col-sm-3"></div>
-        <form action="/chat/create" method="post">
-          <input type="text" name="title">
-          <input type="hidden" name="team" value=<%=@team.id%>>
-          <br />
-          <% @team.users.each do |p| %>
-            <% if p != current_user %>
-              <%= p.email %> = <%= check_box_tag('user_ids[]', p.id) %><br />
-            <% end %>
-          <% end %>
-          <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
-          <div class="col-sm-2"><button type="submit" vlaue="Send" class="btn btn-new btn-circle btn-lg"><i class="glyphicon glyphicon-plus"></i></button></div>
-        </form>
+        <div class="col-sm-3"><button class="btn btn-new btn-circle btn-lg" type="button" data-toggle="collapse" data-target="#addchatroom" aria-expanded="false" aria-controls="addchatroom" style="margin-top: 8px;"><i class="glyphicon glyphicon-plus"></i></button></div>
+        
       </div>
-      
+      <div class="row collapse" id="addchatroom">
+          <form action="/chat/create" method="post">
+            회의방 이름 <input type="text" name="title" >
+            <input type="hidden" name="team" value=<%=@team.id%>>
+            <br />
+            <% temp.each_with_index do |t,idx| %>
+        		  <% if t.id != current_user.id %>
+        		    <div class="row" id="chat_top">
+                  <div id="profile<%=idx%>" class="col-sm-12">
+            	  		<aside style="padding-left: 12px;">
+            		    	<img id="img_setting" class="img-circle" alt="profile" src="<%=t.image%>">
+            	    	</aside>
+          		    	<h5 style="color: black;"><%=t.first_name%></h5>
+          		    	<%= check_box_tag('user_ids[]', t.id) %>
+            	  	</div>
+                </div>
+      		  	<% end %>
+        		<% end %>
+            <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
+            <div class="col-sm-2"><button type="submit" vlaue="Send" class="btn btn-new btn-circle btn-lg"><i class="glyphicon glyphicon-plus"></i></button></div>
+          </form>
+        </div>
+      <div class="row" id="chat_top">
+        <div class="col-sm-12">
+          <h5 style="color: #52D5CC">회의방</h3>
+        </div>
+      </div>
+    </div>
       <% if @chat %>
         <% @chat.each do |chat| %>
           <div class="row" id="chat_top">
             <form action ="/message/show" method="get">
               <div id="profile_me" class="col-sm-12">
-                <li>
                     <input type="hidden" name="chat" value="<%=chat.id%>">
-                    <input type="submit" value="<%=chat.title%>">
-                </li>
+                    <input class="btn btn-default" type="submit" value="<%=chat.title%>">
               </div>
             </form>
           </div>
