--- a/app/views/chat/show.html.erb
+++ b/app/views/chat/show.html.erb
@@ -285,7 +285,7 @@
 	
 	<!-- Tab panes -->
 	<div class="tab-content">
-		<div role="tabpanel" class="tab-pane active" id="tasklist">
+		<div role="tabpanel" class="tab-pane active" id="tasklist" style="background-color: #F3F3F3;">
 			<style>
 				.bar2 {
 				    background-color: #F3F3F3; /*gray*/
