--- a/app/views/team/index.html.erb
+++ b/app/views/team/index.html.erb
@@ -2,7 +2,7 @@
 <style>
 body
 {
-background-image:url('/bgmoomin.jpg');
+background-image:url('/bgpic.jpg');
 background-repeat:no-repeat;
 background-size: cover;
 }
