--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -26,12 +26,12 @@ background-size: cover;
             
             <div class="field">
               <%= f.label :성 %><br />
-              <%= f.text_field :last_name %>
+              <%= f.text_field :last_name, required: true %>
             </div>
             
             <div class="field">
               <%= f.label :이름 %><br />
-              <%= f.text_field :first_name %>
+              <%= f.text_field :first_name, required: true %>
             </div>
           
             <div class="field">
