--- a/app/views/team/adding.html.erb
+++ b/app/views/team/adding.html.erb
@@ -15,12 +15,15 @@
         <div class="panel panel-default">
         <div class="panel-body">
           <h1>팀원 추가</h1>
-          <form class="form-inline" action="/team/adding" method="post">
-            <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
-            <div class="form-group"></div>
-            <input type="hidden" name="team" value="<%=@team.id%>">
-            <input class="form-control" type="email" name="user_email" placeholder="이메일 입력" required>
-            <button type="submit" class="btn btn-default">팀원 추가</button>
+          <%= @ment %>
+          <br>
+          <br>
+          <form action="/team/addmember" method="get">
+            
+            <input type="hidden" name="team" value=<%=@team.id%>>
+            
+            <a href="#" onclick="this.parentNode.submit()">팀원 더 초대하기</a>
+            
           </form>
         </div>
       </div>
