--- a/app/views/team/profile.html.erb
+++ b/app/views/team/profile.html.erb
@@ -24,7 +24,7 @@ background-size: cover;
           <div class="collapse" id="name">
             <form class="form-inline" action="/team/profileupdate" method="post" enctype="multipart/form-data">
               <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
-              <input class="form-control" type="text" name="name" placeholder="새로운 이름 입력 후 엔터">
+              <input class="form-control" type="text" name="name" placeholder="새로운 이름 입력 후 엔터" required>
             </form>
           </div>
           *수정하려는 부분을 클릭하세요
